fix: attachments overflow bug (#1956)
closes #1952

--- a/packages/styles/src/styles/tailwindcss/thread.css
+++ b/packages/styles/src/styles/tailwindcss/thread.css
@@ -12,7 +12,7 @@
 }
 
 .aui-thread-viewport-spacer {
-  @apply flex-grow min-h-8;
+  @apply min-h-8 flex-grow;
 }
 
 .aui-thread-scroll-to-bottom {
@@ -66,15 +66,17 @@
 .aui-composer-send {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
+
 .aui-composer-cancel {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
+
 .aui-composer-attach {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
 
 .aui-composer-attachments {
-  @apply flex w-full flex-row gap-3 px-10;
+  @apply flex w-full flex-row gap-3 overflow-x-auto;
 }
 
 /* attachment */
@@ -114,7 +116,7 @@
 /* user message */
 
 .aui-user-message-root {
-  @apply grid auto-rows-auto grid-cols-[minmax(72px,1fr)_auto] gap-y-2 [&:where(>*)]:col-start-2;
+  @apply grid-cols-[minmax(72px, 1fr)_auto] grid auto-rows-auto gap-y-2 [&:where(>*)]:col-start-2;
   @apply w-full max-w-[var(--thread-max-width)] py-4;
 }
 
